<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/app_color"
    tools:context=".RegisterAgentOneActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorBarBackground"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/number_two"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/two"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/number_two" />
        <TextView
            android:id="@+id/basic_info_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:fontFamily="@font/roboto_slab_bold"
            android:text="@string/passport_upload"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/toolbar_two"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorBarBackground"
        android:layout_height="?attr/actionBarSize">
        <TextView
            android:id="@+id/basic_info_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="18dp"
            android:fontFamily="@font/roboto"
            android:layout_marginStart="18dp"
            app:fontFamily="serif"
            android:text="@string/estate_agent_tell_us_about_yourself"
            android:textColor="@android:color/white"
            android:textSize="14sp"/>
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/toolbar_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.CustomColor"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
    <ScrollView
        android:id="@+id/layout2"
        android:layout_below="@+id/progressBar"
        android:layout_margin="8dp"
        android:paddingBottom="70dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="6dp"
                android:id="@+id/passport_text"
                android:fontFamily="@font/muli_bold"
                android:text="@string/passport_upload"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/muli"
                android:layout_below="@+id/passport_text"
                android:id="@+id/passport_info_text_one"
                android:text="@string/passport_upload_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="4dp"
                android:fontFamily="@font/muli"
                android:layout_below="@+id/passport_info_text_one"
                android:id="@+id/passport_info_text_two"
                android:text="@string/passport_upload_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="35dp"
                android:fontFamily="@font/muli"
                android:layout_below="@+id/passport_info_text_two"
                android:id="@+id/passport_info_text_three"
                android:text="@string/passport_upload_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <ImageView
                android:layout_margin="10dp"
                android:layout_below="@+id/passport_info_text_three"
                android:layout_centerHorizontal="true"
                android:id="@+id/passport_image"
                android:src="@drawable/avatar_image"
                android:layout_width="130dp"
                android:layout_height="130dp"
                android:contentDescription="@string/avatar_image" />
            <TextView
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_below="@+id/passport_image"
                android:fontFamily="@font/muli"
                android:id="@+id/passport_click_info"
                android:text="@string/icon_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>
    </ScrollView>
    <Button
        android:id="@+id/continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:textSize="16sp"
        android:textColor="@drawable/text_selector2"
        android:layout_margin="8dp"
        android:paddingTop="8dp"
        android:background="@drawable/button_selector"
        android:text="@string/continue_reg" />
</RelativeLayout>