<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/app_color"
    tools:context=".PhoneVerificationActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/colorBarBackground"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">
        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_margin="10dp"
            android:layout_marginLeft="16dp"
            android:src="@drawable/phone"
            android:layout_marginStart="16dp"
            android:contentDescription="@string/phone_number_verification" />

        <TextView
            android:id="@+id/basic_info_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            app:fontFamily="@font/roboto"
            android:text="@string/phone_number_verification"
            android:textColor="@android:color/white"
            android:textSize="14sp" />
    </androidx.appcompat.widget.Toolbar>
    <RelativeLayout
        android:id="@+id/toolbar_two"
        android:layout_marginBottom="1dp"
        android:layout_below="@+id/toolbar"
        android:layout_width="match_parent"
        android:background="@color/colorBarBackground"
        android:layout_height="?attr/actionBarSize">
    </RelativeLayout>
    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_below="@+id/toolbar_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.CustomColor"
        android:indeterminate="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />
    <EditText
        android:id="@+id/phone_number"
        android:inputType="phone"
        android:padding="16dp"
        android:layout_below="@+id/progressBar"
        android:drawableLeft="@drawable/ic_call_black_24dp"
        android:maxLength="14"
        android:fontFamily="@font/muli"
        android:layout_margin="4dp"
        android:drawablePadding="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone_number"
        android:drawableStart="@drawable/ic_call_black_24dp" />
    <EditText
        android:id="@+id/verification_code"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/muli"
        android:drawableLeft="@drawable/ic_lock_black_24dp"
        android:drawablePadding="16dp"
        android:layout_margin="4dp"
        android:padding="16dp"
        android:inputType="number"
        android:enabled="false"
        android:layout_below="@id/phone_number"
        android:hint="@string/verification_code"
        android:drawableStart="@drawable/ic_lock_black_24dp" />
    <TextView
        android:id="@+id/verification_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:textAlignment="center"
        android:fontFamily="@font/muli"
        android:textStyle="bold"
        android:layout_above="@+id/verification_button"
        android:text="@string/a_verification_code_will_be_sent_to_your_phone_number"
        />
    <Button
        android:id="@+id/verification_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textAllCaps="true"
        android:fontFamily="@font/muli_bold"
        android:textSize="16sp"
        android:textColor="@drawable/text_selector"
        android:layout_margin="8dp"
        android:paddingTop="8dp"
        android:background="@drawable/button_selector"
        android:text="@string/send_verification" />
</RelativeLayout>